# hyni.web

./: .env.example  .gitignore  README.md
backend/: CMakeLists.txt
backend/config/: drogon.json
backend/schemas/: openai.json
backend/src/: main.cc
backend/src/controllers/: ChatController.cc  ChatController.h
backend/src/hyni/: mcp_client.cpp  mcp_client.h  sys_prompts.cpp  sys_prompts.h  types.h  web_client.cpp  web_client.h
backend/tests/: CMakeLists.txt  http_client.h  test_assets.h  test_chat_api.cpp
backend/tests/fixtures/: mcp_stub.py
cloudflared/: README.md  config.standalone.example.yml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: fixtures.ts
frontend/e2e/tests/: chat-streaming.spec.ts  composer.spec.ts  local-scan.spec.ts  markdown-copy.spec.ts  mermaid.spec.ts  settings.spec.ts  storage-resilience.spec.ts  streaming-tools.spec.ts  tool-calls.spec.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: ChatMessages.tsx  CopyButton.tsx  DayDot.tsx  FengShuiBadge.tsx  ImageDropZone.tsx  MermaidBlock.tsx  ModeToggle.tsx  SttPicker.tsx  TtsPicker.tsx
frontend/src/lib/: api.ts  fengshui.ts  files.ts  pdf.ts  storage.ts  types.ts
frontend/src/pages/: BenchmarkPage.tsx  ChatPage.tsx  SettingsPage.tsx
frontend/src/state/: ChatStore.tsx
frontend/src/stt/: TransformersJsAdapter.ts  WebSpeechAdapter.ts  WstreamAdapter.ts  index.ts  init.ts  registry.ts  types.ts  useSpeechRecognizer.ts
frontend/src/tts/: ElevenLabsSpeaker.ts  PiperSpeaker.ts  WebSpeechSpeaker.ts  init.ts  registry.ts  types.ts  useSpeaker.ts  webspeech.ts
public/: index.html
scripts/: build.sh  fetch-models.sh  run.sh
systemd/: hyni.service
